replace paths to absolute

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script type="application/ld+json">
 {"url":"/","@type":"WebSite","description":"Мой маленький уголок кодинга","headline":"danya140 blog","name":"danya140 blog","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="blog/assets/main.css"><link type="application/atom+xml" rel="alternate" href="/feed.xml" title="danya140 blog" /></head>
+<link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="/feed.xml" title="danya140 blog" /></head>
 <body><header class="site-header" role="banner">
 
   <div class="wrapper"><a class="site-title" rel="author" href="/">danya140 blog</a><nav class="site-nav">
