--- a/en/about/index.html
+++ b/en/about/index.html
@@ -9,18 +9,18 @@
 <meta property="og:locale" content="en" />
 <meta name="description" content="Мой маленький уголок кодинга" />
 <meta property="og:description" content="Мой маленький уголок кодинга" />
-<link rel="canonical" href="/about/" />
-<meta property="og:url" content="/about/" />
+<link rel="canonical" href="/blog/about/" />
+<meta property="og:url" content="/blog/about/" />
 <meta property="og:site_name" content="danya140 blog" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="global.about" />
 <script type="application/ld+json">
-{"url":"/about/","@type":"WebSite","description":"Мой маленький уголок кодинга","headline":"global.about","name":"danya140 blog","@context":"https://schema.org"}</script>
+{"url":"/blog/about/","@type":"WebSite","description":"Мой маленький уголок кодинга","headline":"global.about","name":"danya140 blog","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="/feed.xml" title="danya140 blog" /></head>
+<link rel="stylesheet" href="/blog/assets/main.css"><link type="application/atom+xml" rel="alternate" href="/blog/feed.xml" title="danya140 blog" /></head>
 <body><header class="site-header" role="banner">
 
-  <div class="wrapper"><a class="site-title" rel="author" href="/">danya140 blog</a><nav class="site-nav">
+  <div class="wrapper"><a class="site-title" rel="author" href="/blog/">danya140 blog</a><nav class="site-nav">
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
         <label for="nav-trigger">
           <span class="menu-icon">
@@ -30,7 +30,7 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/about/">About</a></div>
+        <div class="trigger"><a class="page-link" href="/blog/about/">About</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
@@ -87,7 +87,7 @@
 
       </div>
     </main><footer class="site-footer h-card">
-  <data class="u-url" href="/"></data>
+  <data class="u-url" href="/blog/"></data>
 
   <div class="wrapper">
 
@@ -97,7 +97,7 @@
           <li class="p-name">danya140 blog</li></ul>
       </div>
 
-      <div class="footer-col footer-col-2"><ul class="social-media-list"><li><a href="https://github.com/danya140"><svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#github"></use></svg> <span class="username">danya140</span></a></li><li><a href="https://www.linkedin.com/in/daniil-berestovoy-586062172"><svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#linkedin"></use></svg> <span class="username">Daniil Berestovoy</span></a></li></ul>
+      <div class="footer-col footer-col-2"><ul class="social-media-list"><li><a href="https://github.com/danya140"><svg class="svg-icon"><use xlink:href="/blog/assets/minima-social-icons.svg#github"></use></svg> <span class="username">danya140</span></a></li><li><a href="https://www.linkedin.com/in/daniil-berestovoy-586062172"><svg class="svg-icon"><use xlink:href="/blog/assets/minima-social-icons.svg#linkedin"></use></svg> <span class="username">Daniil Berestovoy</span></a></li></ul>
 </div>
 
       <div class="footer-col footer-col-3" align="right">
